# whisper-macos-cli

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AGENTS.pt-BR.md  CHANGELOG.md  CHANGELOG.pt-BR.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  LICENSE  LICENSE-APACHE  NOTICE  PRIVACY.md  PRIVACY.pt-BR.md  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  THIRD-PARTY-LICENSES.md  build.rs  deny.toml  llms-full.txt  llms.pt-BR.txt  llms.txt
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml  release.yml
benches/: audio_benches.rs
docs/: AGENTS.md  AGENTS.pt-BR.md  COOKBOOK.md  COOKBOOK.pt-BR.md  CROSS_PLATFORM.md  CROSS_PLATFORM.pt-BR.md  FAQ.md  FAQ.pt-BR.md  HOW_TO_USE.md  HOW_TO_USE.pt-BR.md  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  MIGRATION.md  MIGRATION.pt-BR.md  TESTING.md  TESTING.pt-BR.md  TROUBLESHOOTING.md  TROUBLESHOOTING.pt-BR.md  VIDEO-EXTRACTION.md  VIDEO-EXTRACTION.pt-BR.md
docs/schemas/: README.md  commands-tree.schema.json  error.schema.json  models-download.schema.json  models-list.schema.json  models-remove.schema.json  schema-envelope.schema.json  transcribe-input.schema.json  transcribe-result.schema.json
skill/whisper-macos-cli-en/: SKILL.md
skill/whisper-macos-cli-pt/: SKILL.md
src/: cli.rs  error.rs  lib.rs  main.rs  output.rs  signal.rs
src/audio/: decode.rs  mod.rs  resample.rs  vad.rs
src/commands/: doctor.rs  mod.rs  models.rs  transcribe.rs
src/language/: detect.rs
src/model/: download.rs  mod.rs  registry.rs  storage.rs
src/video/: ffmpeg.rs  mod.rs
src/whisper/: context.rs  mod.rs  transcribe.rs
tests/: cli.rs  cli_subprocess.rs  concurrent_shutdown.rs  proptest_filters.rs  proptest_language.rs  proptest_vad.rs  snapshots.rs  tempfile_storage.rs  video_extraction.rs  video_real.rs  wiremock_download.rs
tests/snapshots/: snapshots__error_audio_decode.snap  snapshots__error_config.snap  snapshots__error_ffmpeg_not_found.snap  snapshots__error_input_not_found.snap  snapshots__error_model_download.snap  snapshots__error_model_not_found.snap  snapshots__error_no_input.snap  snapshots__error_unsupported_format.snap  snapshots__error_unsupported_platform.snap  snapshots__error_unsupported_video_format.snap  snapshots__error_video_extraction_failed.snap  snapshots__error_whisper_inference.snap
